build file change

--- a/jitpackpublishmodule/build.gradle
+++ b/jitpackpublishmodule/build.gradle
@@ -47,7 +47,7 @@ afterEvaluate{
             release(MavenPublication){
                 from components.release
 
-                groupId = 'com.jitpackpublishdemo'
+                groupId = 'com.github.prashantrajput1612'
                 artifactId = 'JitpackPublishDemo'
                 version = '1.0'
             }
